# Transcoder

./: CMakeLists.txt  README.md  TranscoderWindow.cpp  TranscoderWindow.h  main.cpp  resources.qrc
